[metadata]
name = wagtail_to_ion
version = 3.1.10
author = anfema GmbH
author_email = admin@anfe.ma
description = Wagtail to ION API adapter
long_description = file:README.md
long_description_content_type = text/markdown
license = Proprietary License
license_files = LICENSE.md
url = https://github.com/anfema/wagtail_to_ion
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Development Status :: 5 - Production/Stable
    Framework :: Django :: 2.2
    Framework :: Wagtail :: 2
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries
keywords = ION, Wagtail, API, Adapter

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    django>=2.2
    wagtail>=2.12
    celery[redis]>=4.3
    djangorestframework>=3.9
    beautifulsoup4>=4.6
    wagtailmedia>=0.4
    python-magic>=0.4

[options.packages.find]
exclude =
    test_app
    test_app.*
    test_proj
    test_proj.*

[flake8]
extend-exclude = locale,templates,migrations
max-line-length = 120
